[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exact-transcriber"
version = "2.0.0"
description = "A Streamlit application for accurate audio transcription using Pydantic AI and Google Gemini"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.32.0",
    "pydantic-ai>=0.0.50",
    "pydantic>=2.5.0",
    "google-genai>=1.10.0",  # Google Gen AI SDK (GA version)
    "pydub==0.25.1",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "nest-asyncio>=1.5.6",
    "protobuf==4.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

authors = [{ name = "Mansour Damanpak", email = "50705400+cyanxxy@users.noreply.github.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["transcription", "streamlit", "audio", "gemini"]
